--- a/makeconfig.d/openwrt.config
+++ b/makeconfig.d/openwrt.config
@@ -17,5 +17,5 @@ CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
-CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=y
+CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini = y
 #CONFIG_PACKAGE_luci-app-udpxy is not set
