--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -49,7 +49,9 @@ jobs:
           ./scripts/feeds install -a
 
       - name: Generate configuration file
-        run: make defconfig
+        run: |
+          cp ./makeconfig.d/openwrt.config ./.config
+          make defconfig
 
       - name: Make download
         run: |
