--- a/makeconfig.d/k2.config
+++ b/makeconfig.d/k2.config
@@ -18,4 +18,4 @@ CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-udpxy is not set
-CONFIG_PACKAGE_luci-app-vlmcsd
+# CONFIG_PACKAGE_luci-app-vlmcsd is not set
