--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -1,7 +1,7 @@
 #
 # This is free software, lisence use MIT.
 # 
-# Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
+# Copyright (C) 2020 KFERMercer <KFER.Mercer@gmail.com>
 # 
 # <https://github.com/KFERMercer/OpenWrt-CI>
 #
@@ -10,10 +10,10 @@ name: Merge-upstream
 
 on:
   schedule:
-    - cron: 10 16 * * *
+    - cron: 0 16 * * *
   # push:
   #   branches: 
-  #     - master
+  #     - main
 
 jobs:
 
@@ -24,7 +24,7 @@ jobs:
     steps:
 
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@v2
       with:
         ref: master
         fetch-depth: 0
@@ -32,10 +32,22 @@ jobs:
 
     - name: Set git identity
       run : |
-        git config --global user.email "xiaojie1127@live.com"
-        git config --global user.name "4kerSoo"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+
     - name: Load upstream commits
-      run: git pull https://github.com/coolsnowwolf/lede.git --no-edit
+      run: git pull https://github.com/coolsnowwolf/lede.git --log --no-commit
+
+    - name: Apply commit changes
+      run: |
+        if [ -f ./.git/MERGE_MSG ]; then
+        mkdir ./tmp && cp ./.git/MERGE_MSG ./tmp/message
+        sed -i "1c [bot] AutoMerging: merge all upstream's changes:" ./tmp/message
+        sed -i '/^\#.*/d' ./tmp/message
+        git commit --file="./tmp/message"
+        else
+        echo "There is no merge commits."
+        fi
 
     - name: Push Commits
       env:
