--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -10,7 +10,7 @@ name: Merge-upstream
 
 on:
   schedule:
-    - cron: 0 16 * * *
+    - cron: 30 19 * * *
   # push:
   #   branches: 
   #     - main
@@ -32,8 +32,8 @@ jobs:
 
     - name: Set git identity
       run : |
-        git config --global user.email "xiaojie1127@live.com"
-        git config --global user.name "4kersoo"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
 
     - name: Load upstream commits
       run: git pull https://github.com/coolsnowwolf/lede.git --log --no-commit
