--- a/makeconfig.d/openwrt.config
+++ b/makeconfig.d/openwrt.config
@@ -12,7 +12,7 @@ CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 # CONFIG_PACKAGE_luci-app-pptp-server is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_luci-theme-argon=y
