--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -11,9 +11,7 @@ name: Merge-upstream
 on:
   schedule:
     - cron: 45 15 * * *
-  # push:
-  #   branches: 
-  #     - main
+  workflow_dispatch:
 
 jobs:
 
