--- a/makeconfig.d/openwrt.config
+++ b/makeconfig.d/openwrt.config
@@ -26,3 +26,4 @@ CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_igmpproxy is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
+CONFIG_PACKAGE_luci-app-shadowsocks=y
