--- a/.github/workflows/Redmi-AC2100.yml
+++ b/.github/workflows/Redmi-AC2100.yml
@@ -1,14 +1,10 @@
-name: Redmi-AC2100
+name: 'Redmi-AC2100'
 
 on:
   schedule:
-    - cron: 0 16 * * Fri
-  release:
-    types: [published]
-    
+    - cron: '0 16 * * Fri'
+      
   workflow_dispatch:
-  watch:
-    types: started
     
 jobs:
 
