--- a/makeconfig.d/ac2100.config
+++ b/makeconfig.d/ac2100.config
@@ -24,5 +24,7 @@ CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-app-webadmin is not set
 CONFIG_PACKAGE_luci-app-upnp is not set
 # CONFIG_PACKAGE_igmpproxy is not set
+CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
