--- a/.github/workflows/ac2100.yml
+++ b/.github/workflows/ac2100.yml
@@ -41,10 +41,11 @@ jobs:
       - name: Update feeds
         run: |
           sed -i 's/#src-git helloworld https://github.com/fw876/helloworld/src-git kenzo https://github.com/kenzok8/openwrt-packages/g' ./feeds.conf.default
+          sed -i 's/#src-git oldpackages http://git.openwrt.org/packages.git/src-git kenzo https://github.com/kenzok8/openwrt-packages/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           sed -i 's/+luci-theme-bootstrap/+luci-theme-argon/g' ./feeds/luci/collections/luci/Makefile
-          sed -i 's/192.168.1.1/192.168.2.1/g' ./package/base-files/files/bin/config_generate
+          sed -i 's/192.168.1.1/192.168.0.1/g' ./package/base-files/files/bin/config_generate
           
       - name: theme
         run: |
