--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -47,7 +47,13 @@ jobs:
           ./scripts/feeds install -a
           sed -i 's/+luci-theme-bootstrap/+luci-theme-argon/g' ./feeds/luci/collections/luci/Makefile
           sed -i 's/192.168.1.1/192.168.2.1/g' ./package/base-files/files/bin/config_generate
-
+  
+      - name: theme
+        run: |
+          cd lede/package/lean
+          rm -rf luci-theme-argon
+          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
+          
       - name: Generate configuration file
         run: |
           cp ./makeconfig.d/openwrt.config ./.config
