--- a/.github/workflows/ac2100.yml
+++ b/.github/workflows/ac2100.yml
@@ -40,18 +40,11 @@ jobs:
 
       - name: Update feeds
         run: |
-          sed -i 's/#src-git helloworld https://github.com/fw876/helloworld/src-git kenzo https://github.com/kenzok8/openwrt-packages/g' ./feeds.conf.default
-          sed -i 's/#src-git oldpackages http://git.openwrt.org/packages.git/src-git small https://github.com/kenzok8/small/g' ./feeds.conf.default
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           sed -i 's/+luci-theme-bootstrap/+luci-theme-argon/g' ./feeds/luci/collections/luci/Makefile
           sed -i 's/192.168.1.1/192.168.0.1/g' ./package/base-files/files/bin/config_generate
-          
-      - name: theme
-        run: |
-          cd lede/package/lean
-          rm -rf luci-theme-argon
-          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
           
       - name: Generate configuration file
         run: |
@@ -62,6 +55,12 @@ jobs:
         run: |
           make download -j8
           find dl -size -1024c -exec rm -f {} \;
+
+      - name: theme
+        run: |
+          cd lede/package/lean
+          rm -rf luci-theme-argon
+          git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
 
       - name: Compile firmware
         run: |
