--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: theme
         run: |
-          cd lede/package/lean
+          cd lede/package
           rm -rf luci-theme-argon
           git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon
 
