--- a/makeconfig.d/ac2100.config
+++ b/makeconfig.d/ac2100.config
@@ -29,3 +29,6 @@ CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+# CONFIG_v2ray-plugin_INCLUDE_GOPROXY is not set
+# CONFIG_XRAY_CORE_COMPRESS_GOPROXY is not set
+# CONFIG_UnblockNeteaseMusicGo_INCLUDE_GOPROXY is not set
