--- a/.github/workflows/e1.yml
+++ b/.github/workflows/e1.yml
@@ -1,12 +1,10 @@
 
-name: E1
+name: openwrt-ci
 
 on:
   schedule:
     - cron: 0 16 * * Fri
-  release:
-    types: [published]
-    
+
   workflow_dispatch:
     
 jobs:
@@ -46,13 +44,13 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           sed -i 's/+luci-theme-bootstrap/+luci-theme-argon/g' ./feeds/luci/collections/luci/Makefile
-          sed -i 's/192.168.1.1/192.168.2.1/g' ./package/base-files/files/bin/config_generate
-
+          sed -i 's/192.168.1.1/192.168.0.1/g' ./package/base-files/files/bin/config_generate
+          
       - name: Generate configuration file
         run: |
           cp ./makeconfig.d/openwrt.config ./.config
           make defconfig
-
+          
       - name: Make download
         run: |
           make download -j8
