--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -1,9 +1,9 @@
 
-name: openwrt-ci
+name: 'E1'
 
 on:
   schedule:
-    - cron: 0 16 * * Fri
+    - cron: '0 16 * * Fri'
 
   workflow_dispatch:
     
