--- a/.github/workflows/ac2100.yml
+++ b/.github/workflows/ac2100.yml
@@ -13,7 +13,7 @@ jobs:
 
     name: Build OpenWrt firmware
 
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
 
     if: github.event.repository.owner.id == github.event.sender.id
 
